Fix routing and layout problem

--- a/nexus-ai/src/app/login/login.component.css
+++ b/nexus-ai/src/app/login/login.component.css
@@ -1,5 +1,23 @@
+html, body {
+  height: 100%;
+  margin: 0;
+}
+
+body {
+  display: flex;
+  flex-direction: column;
+}
+
+.main-content {
+  /* margin-bottom: 150px; */
+}
+
 .login-container {
 
+}
+
+.login-content {
+  /* margin-bottom:100px; */
 }
 
 img {
@@ -20,6 +38,7 @@ h1 {
   display: flex;
   align-items: center;   /* vertically centers the image and text */
   justify-content: center; /* optional: centers the content horizontally */
+  align-items: center;
 
   width: 100%;
   height: auto;          /* adjust height as needed */
@@ -37,6 +56,18 @@ h1 {
   background-position: center;
 }
 
+.text-container {
+  /* border: solid red 10px; */
+  height: 150px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+form {
+  text-align: start;
+}
+
 /* 
   #logo {
     background-image: url('../assets/logo.png');
@@ -48,7 +79,7 @@ h1 {
 } 
 */
 
-body {
+.main-container{
   background-image: 
     linear-gradient(120deg, rgba(234, 234, 234, 0.2), rgba(0, 0, 0, 0.2)),
     url('../assets/texture.jpg');
@@ -58,8 +89,17 @@ body {
   background-blend-mode: overlay;
   background-color: #1c1c1f;
 
+
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+
+
   animation: zoomEffect 10s ease-in-out infinite, gradientMove 20s ease infinite;
 }
+
 
 /* Zoom Effect */
 @keyframes zoomEffect {
@@ -84,6 +124,9 @@ body {
   }
 }
 
+.card {
+  width: 20rem;
+}
 
 
 input::placeholder {
